--- a/vignettes/Visualize_model_structure.Rmd
+++ b/vignettes/Visualize_model_structure.Rmd
@@ -166,3 +166,21 @@ inlamemi_model <- fit_inlamemi(data = simple_data,
 cat(show_data_structure(inlamemi_model$stack_data)$matrix_string)
 ```
 
+
+
+```{r, results = 'asis'}
+mis_mod <- fit_inlamemi(formula_moi = y ~ x + z1 + z2,
+                          formula_imp = x ~ z1,
+                          formula_mis = m ~ z2 + x,
+                          family_moi = "gaussian",
+                          data = mar_data,
+                          error_type = "missing",
+                          prior.beta.error = c(0, 1/1000),
+                          prior.gamma.error = c(0, 1/1000),
+                          prior.prec.moi = c(10, 9),
+                          prior.prec.imp = c(10, 9),
+                          initial.prec.moi = 1,
+                          initial.prec.imp = 1)
+cat(show_data_structure(mis_mod$stack_data)$matrix_string)
+```
+
