--- a/vignettes/simulated_examples.Rmd
+++ b/vignettes/simulated_examples.Rmd
@@ -398,6 +398,10 @@ plot(airpollution_model, plot_intercepts = FALSE) +
 
 ## Poisson regression with classical error and missing data
 
+|Error types | Likelihood | Response | Covariate with error | Other covariate(s) |
+|:-----------|:----------|:--------|:----------|:------------|
+| Classical, missing | Poisson | $y$ | $w$ | $z$ |
+
 ```{r}
 set.seed(1)
 nn <- 1000
@@ -433,11 +437,11 @@ data_pois <- data.frame(x = x, z = z, y = y, w = w, id = rep(seq(1:50), each = 2
 
 Simple regression models with correct and error-prone variables to check the effect:
 
-```{r}
+```{r, eval = FALSE}
 library(lme4)
-summary(glmer(y ~ x + z + (1|id), data = data_pois, family="poisson"))
+summary(glmer(y ~ x + z + (1|id), data = data_pois, family="poisson"))$coef
 
-summary(glmer(y ~ w + z + (1|id),data=data4,family="poisson"))$coef
+summary(glmer(y ~ w + z + (1|id), data = data_pois, family="poisson"))$coef
 ```
 
 
@@ -450,13 +454,9 @@ model_pois <- fit_inlamemi(data = data_pois,
                        formula_mis = m ~ z,
                        family_moi = "poisson",
                        error_type = c("classical","missing"),
-                       # prior.prec.moi = c(10, 9),
-                       # prior.prec.berkson = c(10, 9),
                        prior.prec.classical = c(19, 9),
                        prior.prec.imp = c(10, 9),
                        prior.beta.error = c(0, 1/1000),
-                       #initial.prec.moi = 1,
-                       #initial.prec.berkson = 1,
                        initial.prec.classical = 2,
                        initial.prec.imp = 1)
 
